# cmake_helpers

./: .gitmodules  CMakeLists.txt  README.md  cma  force_include.cmake  generate_target.cmake  init_target.cmake  nice_target_sources.cmake  nuget.cmake  options.cmake  options_linux.cmake  options_mac.cmake  options_win.cmake  paths.cmake  run_cmake.py  set_compile_options_if_exists.cmake  target_compile_options_if_exists.cmake  target_link_frameworks.cmake  target_link_optional_libraries.cmake  target_link_options_if_exists.cmake  target_link_static_libraries.cmake  target_prepare_qrc.cmake  validate_d3d_compiler.cmake  validate_d3d_compiler.py  validate_special_target.cmake  variables.cmake  version.cmake
linux_allocation_tracer/: CMakeLists.txt  linux_allocation_trace_reader.cpp  linux_allocation_tracer.cpp  linux_allocation_tracer.h
linux_glib_helper/: CMakeLists.txt  linux_glib_helper.cpp
linux_glibc_wraps/: CMakeLists.txt
linux_glibc_wraps/platform/linux/: linux_glibc_wraps.c  linux_glibc_wraps.gyp  linux_glibc_wraps_32.c  linux_glibc_wraps_64.c
linux_gtk_helper/: CMakeLists.txt  linux_gtk_helper.cpp
linux_jemalloc_helper/: CMakeLists.txt  linux_jemalloc_helper.cpp
linux_wayland_helper/: CMakeLists.txt  linux_wayland_helper.cpp
linux_xcb_helper/: CMakeLists.txt  linux_xcb_helper.cpp
win_directx_helper/: CMakeLists.txt  win_directx_helper.cpp
